# mercer-research

./: .gitignore  Cargo.toml  README.md
.github/workflows/: clippy.yaml
backend/: Cargo.toml
backend/src/: main.rs
benches/: convolve.rs  train.rs
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/NeuralNetVisualizer/: index.css  index.tsx
frontend/src/requests/: rcn.ts
rcn/: Cargo.toml
rcn/benches/: convolve.rs  train.rs
rcn/src/: errors.rs  lib.rs  main.rs  rcn.rs
rcn/src/utils/: kernel.rs
report/: .gitignore  main.bib  main.tex
report/sections/: end.tex  intro.tex  ml.tex
src/: lib.rs  main.rs  rcn.rs
src/utils/: kernel.rs  mod.rs  serialization.rs
