[package]
name = "mercer-research"
authors = ["Jacob Strader <11006561@live.mercer.edu>"]
description = "A convolutional neural network built in Rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.31.1"
image = "0.24.3"
num = "0.4.0"
rand = "0.8.5"
rand_distr = "0.4.3"

[dev-dependencies]
criterion = "0.3.6"

[[bench]]
name = "convolve"
harness = false

[[bench]]
name = "train"
harness = false