[package]
name = "rcn_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rcn = { path = "../rcn" }
serde = { version = "1.0.157", features = ["derive"] }
actix-web = "4"
base64 = "0.21.0"
bincode = "1.3.3"
rand = "0.8.5"
env_logger = "0.10.0"
image = "0.24.5"
actix-cors = "0.6.4"
log = "0.4.17"
